[package]
name = "crumb"
version = "0.1.0"
authors = ["mriise <mark.riise26@gmail.com>"]
liscense = "MIT"
description = "Encode a nibble from a u64 as a u8."
repository = "https://github.com/mriise/crumb"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]