[package]
name = "crumb"
version = "0.2.0"
authors = ["mriise <mark.riise26@gmail.com>"]
license = "MIT"
description = "Encode a nibble from a u64 as a u8."
repository = "https://github.com/mriise/crumb"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]